[FLINK-31827] Compute output ratio per edge